qtdragon /hd/lathe/vert: add graphics options button

--- a/share/qtvcp/screens/qtdragon/qtdragon.ui
+++ b/share/qtvcp/screens/qtdragon/qtdragon.ui
@@ -3560,6 +3560,34 @@ PLATE</string>
                              <number>3</number>
                             </property>
                             <item>
+                             <widget class="ActionToolButton" name="actiontoolbutton_2">
+                              <property name="minimumSize">
+                               <size>
+                                <width>50</width>
+                                <height>36</height>
+                               </size>
+                              </property>
+                              <property name="maximumSize">
+                               <size>
+                                <width>50</width>
+                                <height>50</height>
+                               </size>
+                              </property>
+                              <property name="text">
+                               <string>OPTN</string>
+                              </property>
+                              <property name="popupMode">
+                               <enum>QToolButton::InstantPopup</enum>
+                              </property>
+                              <property name="userViewAction" stdset="0">
+                               <bool>false</bool>
+                              </property>
+                              <property name="OptionMenuAction" stdset="0">
+                               <bool>true</bool>
+                              </property>
+                             </widget>
+                            </item>
+                            <item>
                              <widget class="ActionToolButton" name="actiontoolbutton">
                               <property name="minimumSize">
                                <size>
@@ -3577,8 +3605,8 @@ PLATE</string>
                                <string>Hold to save current view</string>
                               </property>
                               <property name="text">
-                               <string>User
-View</string>
+                               <string>USER
+VIEW</string>
                               </property>
                               <property name="checkable">
                                <bool>true</bool>
@@ -3922,37 +3950,6 @@ View</string>
                               </property>
                               <property name="alt_textTemplate" stdset="0">
                                <string>%1.2f mm</string>
-                              </property>
-                             </widget>
-                            </item>
-                            <item>
-                             <widget class="QPushButton" name="btn_dimensions">
-                              <property name="sizePolicy">
-                               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                                <horstretch>0</horstretch>
-                                <verstretch>0</verstretch>
-                               </sizepolicy>
-                              </property>
-                              <property name="minimumSize">
-                               <size>
-                                <width>50</width>
-                                <height>36</height>
-                               </size>
-                              </property>
-                              <property name="maximumSize">
-                               <size>
-                                <width>50</width>
-                                <height>50</height>
-                               </size>
-                              </property>
-                              <property name="toolTip">
-                               <string>Toggle display dimensions</string>
-                              </property>
-                              <property name="text">
-                               <string>D</string>
-                              </property>
-                              <property name="checkable">
-                               <bool>true</bool>
                               </property>
                              </widget>
                             </item>
@@ -4446,6 +4443,13 @@ View</string>
                            </property>
                            <property name="_dtg" stdset="0">
                             <bool>false</bool>
+                           </property>
+                           <property name="grid_color" stdset="0">
+                            <color>
+                             <red>200</red>
+                             <green>139</green>
+                             <blue>138</blue>
+                            </color>
                            </property>
                            <property name="background_color" stdset="0">
                             <color>
@@ -17763,7 +17767,7 @@ SCROLL</string>
              <number>2</number>
             </property>
             <property name="text">
-             <string>12:35:39 PM</string>
+             <string>04:32:14 AM</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
@@ -18224,22 +18228,6 @@ SCROLL</string>
     <hint type="destinationlabel">
      <x>515</x>
      <y>0</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>btn_dimensions</sender>
-   <signal>clicked()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>btn_dimensions_clicked()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>425</x>
-     <y>285</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>0</x>
-     <y>323</y>
     </hint>
    </hints>
   </connection>
@@ -18855,7 +18843,7 @@ SCROLL</string>
  </slots>
  <buttongroups>
   <buttongroup name="selectButtonGroup"/>
-  <buttongroup name="page_buttonGroup"/>
   <buttongroup name="mode_buttonGroup"/>
+  <buttongroup name="page_buttonGroup"/>
  </buttongroups>
 </ui>
