--- a/share/qtvcp/screens/qtdragon_hd_vert/qtdragon_hd_vert.ui
+++ b/share/qtvcp/screens/qtdragon_hd_vert/qtdragon_hd_vert.ui
@@ -739,7 +739,7 @@
                  <enum>QFrame::Raised</enum>
                 </property>
                 <property name="currentIndex">
-                 <number>4</number>
+                 <number>0</number>
                 </property>
                 <widget class="QWidget" name="stackedWidget_mainTabPage1">
                  <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -809,6 +809,34 @@
                       <number>0</number>
                      </property>
                      <item>
+                      <widget class="ActionToolButton" name="actiontoolbutton_2">
+                       <property name="minimumSize">
+                        <size>
+                         <width>50</width>
+                         <height>36</height>
+                        </size>
+                       </property>
+                       <property name="maximumSize">
+                        <size>
+                         <width>50</width>
+                         <height>50</height>
+                        </size>
+                       </property>
+                       <property name="text">
+                        <string>OPTN</string>
+                       </property>
+                       <property name="popupMode">
+                        <enum>QToolButton::InstantPopup</enum>
+                       </property>
+                       <property name="userViewAction" stdset="0">
+                        <bool>false</bool>
+                       </property>
+                       <property name="OptionMenuAction" stdset="0">
+                        <bool>true</bool>
+                       </property>
+                      </widget>
+                     </item>
+                     <item>
                       <widget class="ActionToolButton" name="actiontoolbutton">
                        <property name="minimumSize">
                         <size>
@@ -826,8 +854,8 @@
                         <string>Hold to save current view</string>
                        </property>
                        <property name="text">
-                        <string>User
-View</string>
+                        <string>USER
+VIEW</string>
                        </property>
                        <property name="checkable">
                         <bool>true</bool>
@@ -1171,37 +1199,6 @@ View</string>
                        </property>
                        <property name="alt_textTemplate" stdset="0">
                         <string>%1.2f mm</string>
-                       </property>
-                      </widget>
-                     </item>
-                     <item>
-                      <widget class="QPushButton" name="btn_dimensions">
-                       <property name="sizePolicy">
-                        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                         <horstretch>0</horstretch>
-                         <verstretch>0</verstretch>
-                        </sizepolicy>
-                       </property>
-                       <property name="minimumSize">
-                        <size>
-                         <width>50</width>
-                         <height>40</height>
-                        </size>
-                       </property>
-                       <property name="maximumSize">
-                        <size>
-                         <width>50</width>
-                         <height>40</height>
-                        </size>
-                       </property>
-                       <property name="text">
-                        <string>D</string>
-                       </property>
-                       <property name="checkable">
-                        <bool>true</bool>
-                       </property>
-                       <property name="checked">
-                        <bool>true</bool>
                        </property>
                       </widget>
                      </item>
@@ -1704,6 +1701,13 @@ View</string>
                     </property>
                     <property name="_dtg" stdset="0">
                      <bool>false</bool>
+                    </property>
+                    <property name="grid_color" stdset="0">
+                     <color>
+                      <red>200</red>
+                      <green>137</green>
+                      <blue>138</blue>
+                     </color>
                     </property>
                     <property name="background_color" stdset="0">
                      <color>
@@ -17968,7 +17972,7 @@ SCROLL</string>
          <number>2</number>
         </property>
         <property name="text">
-         <string>08:50:23 PM</string>
+         <string>04:56:23 AM</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -19044,22 +19048,6 @@ SCROLL</string>
    </hints>
   </connection>
   <connection>
-   <sender>btn_dimensions</sender>
-   <signal>clicked()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>btn_dimensions_clicked()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>84</x>
-     <y>107</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>1188</x>
-     <y>-106</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
    <sender>systemtoolbutton</sender>
    <signal>toggled(bool)</signal>
    <receiver>MainWindow</receiver>
@@ -19160,8 +19148,8 @@ SCROLL</string>
   <slot>btn_systemtool_toggled()</slot>
  </slots>
  <buttongroups>
-  <buttongroup name="page_buttonGroup"/>
   <buttongroup name="selectButtonGroup"/>
   <buttongroup name="mode_buttonGroup"/>
+  <buttongroup name="page_buttonGroup"/>
  </buttongroups>
 </ui>
