Gmoccapy: Fix odd spindle behavior when using G96
Fixes issue #3447:
-  gui spindle speed display showing a very large number when G96 (CSS) mode is used
-  spindle.0.speed-out pin being reset to a wrong value when the gui spindle buttons are updated
 after calling G96 through MDI

--- a/src/emc/usr_intf/gmoccapy/gmoccapy.glade
+++ b/src/emc/usr_intf/gmoccapy/gmoccapy.glade
@@ -3226,6 +3226,7 @@
                                                             <property name="draw-indicator">False</property>
                                                             <property name="group">rbt_stop</property>
                                                             <signal name="clicked" handler="on_rbt_reverse_clicked" swapped="no"/>
+                                                            <signal name="released" handler="on_rbt_reverse_released" swapped="no"/>
                                                           </object>
                                                           <packing>
                                                             <property name="expand">True</property>
@@ -3264,6 +3265,7 @@
                                                             <property name="draw-indicator">False</property>
                                                             <property name="group">rbt_stop</property>
                                                             <signal name="clicked" handler="on_rbt_forward_clicked" swapped="no"/>
+                                                            <signal name="released" handler="on_rbt_forward_released" swapped="no"/>
                                                           </object>
                                                           <packing>
                                                             <property name="expand">False</property>
