--- a/lib/python/qtvcp/lib/gcode_utility/hole_circle.ui
+++ b/lib/python/qtvcp/lib/gcode_utility/hole_circle.ui
@@ -1189,7 +1189,7 @@
         <property name="alignment">
          <set>Qt::AlignCenter</set>
         </property>
-        <layout class="QVBoxLayout" name="layout_gb_preview" stretch="1,0">
+        <layout class="QVBoxLayout" name="layout_gb_preview" stretch="1,0,0">
          <property name="spacing">
           <number>4</number>
          </property>
@@ -1213,6 +1213,24 @@
            <property name="spacing">
             <number>4</number>
            </property>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_14">
+           <item>
+            <widget class="QLabel" name="label_2">
+             <property name="text">
+              <string>CHORD LENGTH</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_chord_length">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
           </layout>
          </item>
          <item alignment="Qt::AlignBottom">
